--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 20)
 add_subdirectory(1_Function_Templates)
 add_subdirectory(2_Class_Templates)
 add_subdirectory(3_Nontype_Template_Parameters)
+add_subdirectory(4_Variadic_Templates)
