--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(1_Function_Templates)
 add_subdirectory(2_Class_Templates)
 add_subdirectory(3_Nontype_Template_Parameters)
 add_subdirectory(4_Variadic_Templates)
+add_subdirectory(5_Tricky_Basics)
