--- a/Computational Mathematics/tests/CMakeLists.txt
+++ b/Computational Mathematics/tests/CMakeLists.txt
@@ -6,7 +6,6 @@ foreach (FILE IN LISTS TEST_FILES)
 
     add_executable(${EXECUTABLE_NAME} ${FILE})
 
-    target_link_libraries(${EXECUTABLE_NAME} PUBLIC ${PROJECT_NAME} gtest gtest_main)
-    target_include_directories(${EXECUTABLE_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/..")
+    target_link_libraries(${EXECUTABLE_NAME} PRIVATE ${PROJECT_NAME} gtest gtest_main)
     add_test(NAME ${EXECUTABLE_NAME} COMMAND ${EXECUTABLE_NAME})
 endforeach ()
