--- a/Celestial Mechanics/CMakeLists.txt
+++ b/Celestial Mechanics/CMakeLists.txt
@@ -22,3 +22,6 @@ target_link_libraries(orbit_EarthGravity celestial_mechanics)
 
 add_executable(orbit_gravity_drag orbit_gravity_drag.cpp)
 target_link_libraries(orbit_gravity_drag celestial_mechanics)
+
+add_executable(orbit_gravity_pressure orbit_gravity_pressure.cpp)
+target_link_libraries(orbit_gravity_pressure celestial_mechanics)
