--- a/Celestial Mechanics/CMakeLists.txt
+++ b/Celestial Mechanics/CMakeLists.txt
@@ -19,3 +19,6 @@ target_link_libraries(orbit_Satellite celestial_mechanics)
 
 add_executable(orbit_noSRP orbit_noSRP.cpp)
 target_link_libraries(orbit_noSRP celestial_mechanics)
+
+add_executable(C20_firstOrder C20_firstOrder.cpp)
+target_link_libraries(C20_firstOrder celestial_mechanics)
