--- a/Computational Mathematics/CMakeLists.txt
+++ b/Computational Mathematics/CMakeLists.txt
@@ -8,5 +8,4 @@ add_subdirectory(third_party)
 enable_testing()
 add_subdirectory(tests)
 
-add_executable(TransportEquation TransportEquation.cpp)
-target_link_libraries(TransportEquation numerical_analysis)
+add_subdirectory(advection_equation_main)
